--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,6 +1,7 @@
 name: CI
 
-permissions: read-all
+permissions:
+  contents: read
 
 on:
   push:
@@ -12,8 +13,19 @@ jobs:
   test:
     timeout-minutes: 5
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        go-version:
+          - "1.20"
     steps:
       - name: Checkout
         uses: actions/checkout@v3
+      - name: Setup Go ${{ matrix.go-version }}
+        uses: actions/setup-go@v3
+        with:
+          go-version: ${{ matrix.go-version }}
+          cache: true
+      - name: Display Go version
+        run: go version
       - name: Test
         run: make test
